--- a/checklist-group.html
+++ b/checklist-group.html
@@ -210,8 +210,8 @@
         <div class="col-sm-6 col-xxl-5 py-3">
           <h3 class="color-buas text-center">Deadlines</h3>
           <ol>
-            <li><strong>First opportunity:</strong> Friday 14 April 2023 before 18:00</li>
-            <li><strong>Retake opportunity:</strong> Friday 9 June 2023 before 18:00</li>
+            <li><strong>First opportunity:</strong> Friday 5 April 2024 before 18:00</li>
+            <li><strong>Retake opportunity:</strong> Friday 31 May 2024 before 18:00</li>
           </ol>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3 bg-lightblue">
@@ -219,10 +219,10 @@
           <ul>
             <li>Deliver the actual website by using GitHub pages (see details in Part 1 of the guide).</li>
             <li>
-              <p class="mb-1">A copy of the repository as a zip file must be posted on CumLaude/LMS.</p>
+              <p class="mb-1">A copy of the repository as a zip file must be posted on Brightspace.</p>
               <p class="mb-1">This is done by going to your GitHub repository and clicking on “Code” then “Download ZIP”. Please rename your zip file according to the convention below:</p>
                 <p class="font-monospace mb-1 ms-4">coursenumber_<wbr>academicyear_<wbr>classnumber_<wbr>groupnumber_<wbr>assignmentname</p>
-                <p class="mb-1 ms-4">Example:  <span class="font-monospace">PRJ4_<wbr>2223_<wbr>class2_<wbr>group3_<wbr>website.zip</span></p>
+                <p class="mb-1 ms-4">Example:  <span class="font-monospace">PRJ4_<wbr>2324_<wbr>class2_<wbr>group3_<wbr>website.zip</span></p>
             </li>
           </ul>
         </div>
@@ -237,59 +237,45 @@
             <li>Information about the brand’s <strong>products and/or services</strong></li>
             <li>Contact information and links to <strong>relevant social media</strong></li>
             <li>Information about the <strong>team</strong></li>
-            <li>A list of <strong>funding tiers</strong>, with associated rewards.</li>
-            <li>Material used for assessment, as part of the <strong>corporate</strong> page</li>
+            <li><s>Material used for assessment, as part of the <strong>corporate</strong> page</s></li>
           </ul>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3 bg-lightorange">
-          <h3 class="text-center">Audience</h3>
+          <h3 class="text-center">Audience and Purpose</h3>
           <p>
             The website must be designed with your target audience in mind.
-            As a “crowdfunding” website, it should appeal to individuals who would want to fund your project in exchange for rewards that you need to define.
+            As a showcase website, it must appeal to the clients of the brand.
+            After visiting this website, future clients must be interested by the brand and willing to buy your products.
           </p>
           <h3 class="text-center">Justifications</h3>
           <p>Justifications for the different units should be delivered directly in the website, as part of a page titled <strong>corporate.html</strong>, which doesn’t need to be matched with your crowdsourcing audience.</p>
           <p>You can create the justification webpage based on the template at <a href="https://buas-media-interactive.github.io/prj4-group-template/corporate.html" target="_blank">buas-media-interactive.github.io/prj4-group-template</a></p>
 
         </div>
-        <div class="col-lg-11 col-xxl-10 py-3">
+        <div class="col-12 py-3">
           <h3 class="text-center color-buas">Assessment criteria</h3>
           <p>
             Please note that the assessment criteria below only cover the <strong>Production</strong> unit.
             Check the project brief for other units.
           </p>
-          <table class="table table-bordered border-dark w-100s">
+          <table class="table table-bordered border-dark table-striped table-responsive-lg w-100">
             <thead>
               <tr>
-                <th class="text-center">Deliverable</th>
-                <th class="text-center">Assessment criteria</th>
-                <th class="text-center">Weight</th>
-                <th>Assessment indicators</th>
+                <th rowspan="2" class="text-center">Deliverable</th>
+                <th rowspan="2" class="text-center">Assessment criteria</th>
+                <th rowspan="2" class="text-center">Weight</th>
+                <th colspan="3" class="text-center">Description of levels of attainment</th>
               </tr>
+              <tr>
+                <th class="text-center bg-success text-light">Excellent</th>
+                <th class="text-center bg-warning ">Sufficient</th>
+                <th class="text-center bg-danger text-light">Insufficient</th>
+              </tr>
+            <p><strong>Pre-requisite:</strong> A link to a publicly visible GitHub-hosted website, a link to the repository, and a copy of the repository as a zip file are posted on Brightspace.</p>
             </thead>
             <tbody class="align-middle">
-              <tr class="bg-success bg-opacity-25">
-                <th colspan="2" rowspan="2" class="text-center">Pre-requisites</th>
-                <td class="text-center">
-                  <h6>Pass/Fail</h6>
-                  <p class="fs-1 lh-1 m-0">
-                  <p class="fs-1 lh-1 m-0">
-                    <input class="form-check-input m-0" type="checkbox" value="" aria-label="Content updated">
-                  </p>
-                </td>
-                <td>The website is accessible publicly through GitHub pages.</td>
-              </tr>
-              <tr class="bg-success bg-opacity-10">
-                <td class="text-center">
-                  <h6>Pass/Fail</h6>
-                  <p class="fs-1 lh-1 m-0">
-                    <input class="form-check-input m-0" type="checkbox" value="" aria-label="Content updated">
-                  </p>
-                </td>
-                <td>A link to the website, a link to the repository, and a copy of the repository as a zip file are posted on LMS.</td>
-              </tr>
-              <tr class="bg-primary bg-opacity-25">
-                <th rowspan="6" class="text-center bg-info bg-opacity-25">
+              <tr class="">
+                <th rowspan="6" class="text-center">
                   <p class="fst-italic fw-normal m-0">Elements assessed directly via</p>
                   <p>Website</p>
                 </th>
@@ -298,30 +284,42 @@
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td>Content is grouped and hierarchized in a way that is well structured, easy to navigate and understand, consistent, intuitive and persuasive.</td>
+                <td class="table-success border-dark">Content is grouped and hierarchized in a way that is well structured, easy to navigate and understand, consistent, intuitive and persuasive.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-primary bg-opacity-10">
-                <td>Uses grids, margins, alignments, contrast and font sizes to achieve a clean, professional and legible look and feel at all screen sizes from mobile to desktop.</td>
+              <tr>
+                <td class="table-success border-dark">Uses grids, margins, alignments, contrast and font sizes to achieve a clean, professional and legible look and feel at all screen sizes from mobile to desktop.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-primary bg-opacity-25">
+              <tr>
                 <td>Uses visual elements (logos, illustrations, photos, infographics, fonts, colours) and design principles to communicate efficiently and concisely and create a distinctive atmosphere.</td>
-              </tr>
-              <tr class="bg-info bg-opacity-10">
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
+              </tr> 
+              <tr>
                 <th rowspan="3" class="text-center">Technical qualities</th>
                 <td rowspan="3" class="text-center">
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td>Follows good practices in file management, with all necessary assets located in correctly named folders and all unused assets removed from the final delivery.</td>
+                <td class="table-success border-dark">Follows good practices in file management, with all necessary assets located in correctly named folders and all unused assets removed from the final delivery.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-info bg-opacity-25">
-                <td>Follows good practices in coding, with the use of appropriate semantic tags, headers, and links to libraries.</td>
+              <tr>
+                <td class="table-success border-dark">Follows good practices in coding, with the use of appropriate semantic tags, headers, and links to libraries.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-info bg-opacity-10">
-                <td>Follows good practices in image management, choosing the right format (JPEG, PNG, SVG) for the right type of content and resizing images to optimize loading times.</td>
+              <tr>
+                <td class="table-success border-dark">Follows good practices in image management, choosing the right format (JPEG, PNG, SVG) for the right type of content and resizing images to optimize loading times.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-warning bg-opacity-25">
-                <th rowspan="5" class="text-center bg-danger bg-opacity-10">
+              <tr>
+                <th rowspan="5" class="text-center">
                   <p class="fst-italic fw-normal m-0">Elements assessed through</p>
                   <p>Justifications</p>
                 </th>
@@ -330,24 +328,34 @@
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td>Lists and justifies all visual choices: the colour scheme (with colour codes), font choices, user interface elements (grids, carousels, menu organizations etc.), the organization of the navigation and content (e.g. how content units are distributed across pages) by using the vocabulary of (UX) design and relating all choices with insight about the target audience.</td>
+                <td class="table-success border-dark">Lists and justifies all visual choices: the colour scheme (with colour codes), font choices, user interface elements (grids, carousels, menu organizations etc.), the organization of the navigation and content (e.g. how content units are distributed across pages) by using the vocabulary of (UX) design and relating all choices with insight about the target audience.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-warning bg-opacity-10">
-                <td>Clearly relates the design elements and their justifications with the purpose of the website as part of marketing, the vision and mission of the brand, and the elements developed in the lean canvas.</td>
+              <tr>
+                <td class="table-success border-dark">Clearly relates the design elements and their justifications with the purpose of the website as part of marketing, the vision and mission of the brand, and the elements developed in the lean canvas.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-danger bg-opacity-25">
+              <tr>
                 <th rowspan="3" class="text-center">Testing report</th>
                 <td rowspan="3" class="text-center">
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td>Describes good quality testing, with a sufficient number of participants, clear testing tasks and testing goals that goals include identifying whether the website fulfils its communication purpose.</td>
+                <td class="table-success border-dark">Describes good quality testing, with a sufficient number of participants, clear testing tasks and testing goals that goals include identifying whether the website fulfils its communication purpose.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-danger bg-opacity-10">
-                <td>Describes issues found through testing with the website, both positive and negative, and sorts them based on level of importance.</td>
+              <tr>
+                <td class="table-success border-dark">Describes issues found through testing with the website, both positive and negative, and sorts them based on level of importance.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
-              <tr class="bg-danger bg-opacity-25">
-                <td>Describes how the final website has improved and/or could be further improved thanks to the outcome of testing.</td>
+              <tr>
+                <td class="table-success border-dark">Describes how the final website has improved and/or could be further improved thanks to the outcome of testing.</td>
+                <td class="table-warning border-dark">[Description of Sufficient]</td>
+                <td class="table-danger border-dark">[Description of Insufficient]</td>
               </tr>
             </tbody>
           </table>
