--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -214,8 +214,8 @@
         <div class="col-sm-6 col-md-4 col-xxl-3 py-3 bg-lightblue d-print-none">
           <h3 class="text-center">Deadlines</h3>
           <ol>
-            <li><strong>First opportunity:</strong> Friday 17 March 2023 before 23:59</li>
-            <li><strong>Retake opportunity:</strong> Friday 9 June 2023 before 23:59</li>
+            <li><strong>First opportunity:</strong> Friday 8 March 2024 before 23:59</li>
+            <li><strong>Retake opportunity:</strong> Friday 31 May 2024 before 23:59</li>
           </ol>
         </div>
         <div class="col-md-4 col-xxl-3 py-3 d-print-none">
@@ -358,8 +358,8 @@
               <label class="form-check-label fs-6 ms-2" for="checkfield">I have checked the three URLs above and they all work!</label>
             </div>
             <button type="submit" class="btn btn-lg btn-danger w-100 mb-3 d-print-none">Click here then choose &ldquo;Save as PDF&rdquo; to generate your hand-in document</button>
-            <p>Please follow the naming conventions: the PDF must be named <strong><span id="file-fullname">PRJ4_2122_<span id="file-studentid"></span>_individualwebsite</span>.pdf</strong></p> 
-            <p>Please upload to <a href="https://teams.microsoft.com/l/team/19%3aMoif_C_KB6nt5TKSJl3-i2xO-ji6TUn3rm9TQqTRSDw1%40thread.tacv2/conversations?groupId=ad369c7a-7a57-4932-abf5-a7c75d5bb439&tenantId=0a33589b-0036-4fe8-a829-3ed0926af886" target="_blank">Teams » Student Projects Year 2 22/23 » Assignments » PRJ4-PRO Individual Web Assignment</a></p>
+            <p>Please follow the naming conventions: the PDF must be named <strong><span id="file-fullname">PRJ4_2324_<span id="file-studentid"></span>_individualwebsite</span>.pdf</strong></p> 
+            <p>Please upload to Brightspace [ADD LINK]</p>
           </form>
         </div>
       </section>
