--- a/part-4.html
+++ b/part-4.html
@@ -328,7 +328,7 @@
             </ul>
             <p>Go to <a href="https://analytics.google.com/" target="_blank">https://analytics.google.com/</a>. If you're not logged in with your Google Account, start by doing so.</p>
             <p>You will then have to create an "Analytics Account" (in the Admin section of the Analytics site) and then create a "Property" which represents your website.</p>
-            <p>To bring data from your website to your Google Analytics account, you will need to add a bit of code to your website. You can find that code under "Tagging instructions", "Global site tag (gtag.js)"</p>
+            <p>To bring data from your website to your Google Analytics account, you will need to add a bit of code to your website. You can find that code under "Installation instructions", "Install manually"</p>
             <p>Paste that HTML code into your landing page and synchronize it by using the "save, commit, push" GitHub desktop workflow.</p>
             <p>Open your web page and check in the source code that you've added the Google Analytics code properly.</p>
             <p>Wait a bit (data streams can take up to a few hours to work properly), then go back to Google Analytics and you'll be able to see your own page visit!</p>
