Work on 3 level rubric

--- a/checklist-group.html
+++ b/checklist-group.html
@@ -284,19 +284,19 @@
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td class="table-success border-dark">Content is grouped and hierarchized in a way that is well structured, easy to navigate and understand, consistent, intuitive and persuasive.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">Content is grouped and hierarchized in a way that is outstandingly self-explanatory, intuitive and persuasive with no inconsistencies between pages in terms of navigation and structure.</td>
+                <td class="table-warning border-dark">Content is grouped, hierarchized and clearly structured, with only few inconsistencies in terms of navigation and structure.</td>
+                <td class="table-danger border-dark">The structure of content is either confusing, unclear and/or inconsistent.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">Uses grids, margins, alignments, contrast and font sizes to achieve a clean, professional and legible look and feel at all screen sizes from mobile to desktop.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">Uses grids, margins, alignments, contrast and font sizes to achieve an outstandingly clean, professional and legible look and feel at all screen sizes from mobile to desktop.</td>
+                <td class="table-warning border-dark">Page elements are generally aligned, contrasted and legible, with few inconsistencies in terms of visual style. Content stays legible on mobile screen sizes.</td>
+                <td class="table-danger border-dark">Page elements are not properly aligned, lack contrast, are difficult to read, are inconsistent and/or becomes difficult to read at certain screen sizes.</td>
               </tr>
               <tr>
-                <td>Uses visual elements (logos, illustrations, photos, infographics, fonts, colours) and design principles to communicate efficiently and concisely and create a distinctive atmosphere.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">The website uses a variety of visual elements (e.g. logos, illustrations, photos, infographics, fonts, colours) and design principles to communicate and reinforce the text copy and create a very distinctive atmosphere.</td>
+                <td class="table-warning border-dark">Visual elements support the message and goals of the website and create a consistent atmosphere.</td>
+                <td class="table-danger border-dark">The website makes limites use of visual elements and/or these visual elements add limited value to the message of the website.</td>
               </tr> 
               <tr>
                 <th rowspan="3" class="text-center">Technical qualities</th>
@@ -304,19 +304,19 @@
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td class="table-success border-dark">Follows good practices in file management, with all necessary assets located in correctly named folders and all unused assets removed from the final delivery.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">All file management described in the guide are strictly adhered to, with all necessary assets located in correctly named folders and all unused assets removed from the final delivery.</td>
+                <td class="table-warning border-dark">File management practices are generally adhered to, with only minor inconsistencies and with only a few unused assets delivered.</td>
+                <td class="table-danger border-dark">Many files do not follow the recommended structure or naming conventions and/or files are missing and/or several unused assets have been left in the repository.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">Follows good practices in coding, with the use of appropriate semantic tags, headers, and links to libraries.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">Follows all coding good practices described in the guide, including the use of appropriate semantic tags, headers, title tags, links to libraries, and proper code identation. Code contains no errors.</td>
+                <td class="table-warning border-dark">Most good practices are adhered to, and the code stays generally legible. Code contains a maximum of 2 errors across the whole website when checked in the W3C validator.</td>
+                <td class="table-danger border-dark">Code is either hard to read, deviates strongly from good practices and/or has many coding errors.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">Follows good practices in image management, choosing the right format (JPEG, PNG, SVG) for the right type of content and resizing images to optimize loading times.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">All images are properly resized and compressed for an optimized balance between image quality on one hand, and loading speed and sustainability on the other hand. The best format (JPEG, PNG, SVG) is selected based on the type of content.</td>
+                <td class="table-warning border-dark">A majority of images are optimized. No image is bigger than 1MB.</td>
+                <td class="table-danger border-dark">A majority of images are not optimized and/or at least one image is bigger than 1MB</td>
               </tr>
               <tr>
                 <th rowspan="5" class="text-center">
@@ -328,14 +328,14 @@
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td class="table-success border-dark">Lists and justifies all visual choices: the colour scheme (with colour codes), font choices, user interface elements (grids, carousels, menu organizations etc.), the organization of the navigation and content (e.g. how content units are distributed across pages) by using the vocabulary of (UX) design and relating all choices with insight about the target audience.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">Lists and justifies all design choices: the colour scheme (with colour codes), font choices, user interface elements (grids, carousels, menu organizations etc.), the organization of the navigation and content (e.g. how content units are distributed across pages) by using the vocabulary of (UX) design and relating all choices with insight about the target audience.</td>
+                <td class="table-warning border-dark">Most of the design choices listed in the description of &ldquo;Excellent&rdquo; are present. For the majority of them, design vocabulary is used.</td>
+                <td class="table-danger border-dark">Many design choices are absent and/or do not use the vocabulary of design in their justifications.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">Clearly relates the design elements and their justifications with the purpose of the website as part of marketing, the vision and mission of the brand, and the elements developed in the lean canvas.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">Outstandingly relates the design elements and their justifications with the purpose of the website as part of marketing, the vision and mission of the brand, and the elements developed in the lean canvas.</td>
+                <td class="table-warning border-dark">Most design elements are at related to content from at least 2 of the other units of the course.</td>
+                <td class="table-danger border-dark">Many design elements are not related to content from other units of the course.</td>
               </tr>
               <tr>
                 <th rowspan="3" class="text-center">Testing report</th>
@@ -343,19 +343,19 @@
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td class="table-success border-dark">Describes good quality testing, with a sufficient number of participants, clear testing tasks and testing goals that goals include identifying whether the website fulfils its communication purpose.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">Thoroughly describes a testing protocol that was conducted at a high level of quality, with participants that match the target audience, clear testing tasks and goals that include identifying whether the website fulfils its communication purpose.</td>
+                <td class="table-warning border-dark">Testing is well described, with at least 4 participants and clear goals and tasks. Testing goals might slightly deviate from the communication goals of the website and participants might slightly deviate from the target audience.</td>
+                <td class="table-danger border-dark">Testing is poorly described, or described in a way that shows that it is superficial.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">Describes issues found through testing with the website, both positive and negative, and sorts them based on level of importance.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">Provides an exhaustive list of findings uncovered from testing, both positive and negative, grouped in a hierarchized and logical way in order to clearly indicate which issues have the strongest impact on the usability of the website.</td>
+                <td class="table-warning border-dark">Provides a clear list of findings that are grouped in an actionable way.</td>
+                <td class="table-danger border-dark">Findings are unclear, vague, poorly grouped and/or not actionable.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">Describes how the final website has improved and/or could be further improved thanks to the outcome of testing.</td>
-                <td class="table-warning border-dark">[Description of Sufficient]</td>
-                <td class="table-danger border-dark">[Description of Insufficient]</td>
+                <td class="table-success border-dark">Provides a list of (potential) improvements that is clearly based on a critical analysis of findings by students. The improvements are explained with excellent clarity.</td>
+                <td class="table-warning border-dark">Provides a list of improvements based on findings from testing. The improvements are based on students’ reflections and not only on testing participants’ suggestions.</td>
+                <td class="table-danger border-dark">List of improvements is very short, superficial, and/or not clearly based on an analysis of findings.</td>
               </tr>
             </tbody>
           </table>
