Added min width to rubric

--- a/checklist-group.html
+++ b/checklist-group.html
@@ -267,9 +267,9 @@
                 <th colspan="3" class="text-center">Description of levels of attainment</th>
               </tr>
               <tr>
-                <th class="text-center bg-success text-light">Excellent</th>
-                <th class="text-center bg-warning ">Sufficient</th>
-                <th class="text-center bg-danger text-light">Insufficient</th>
+                <th class="text-center bg-success text-light" style="min-width: 300px;">Excellent</th>
+                <th class="text-center bg-warning " style="min-width: 300px;">Sufficient</th>
+                <th class="text-center bg-danger text-light" style="min-width: 300px;">Insufficient</th>
               </tr>
             <p><strong>Pre-requisite:</strong> A link to a publicly visible GitHub-hosted website, a link to the repository, and a copy of the repository as a zip file are posted on Brightspace.</p>
             </thead>
