--- a/part-2.html
+++ b/part-2.html
@@ -168,7 +168,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light d-flex align-items-center px-2 px-lg-3" href="https://web.microsoftstream.com/channel/987d2668-18d7-4d84-9342-4774e7d0ba94" target="_blank">
+          <a class="nav-link text-light d-flex align-items-center px-2 px-lg-3" href="https://edubuas.sharepoint.com/:l:/s/CourseMaterialsRaphaelVelt/FJDUldBOTIZGnvbOpl04gS0Bxif_V1-jDFeTOMErAVzXgw?e=QMb6GA" target="_blank">
             <img class="me-md-1" src="images/common/film.svg" width="15" alt="Videos">
             <span class="d-none d-md-inline">Videos</span>
           </a>
